<?xml version="1.0" encoding="utf-8"?>
<TextView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/text1"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:fontFamily="sans-serif-light"
    style="?LeftDrawerListItemStyle" />