<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/button_container"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical">

	<!-- replicates the bottom row of an AlertDialog, with "Cancel" on the left
	 and "OK" on the right. It uses the default style, and supports Android 13
	  user-picked accent colors for buttons -->

	<!-- TODO There should be an androidX class that builds this: remove and use that -->

	<View
		android:id="@+id/divider"
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="?android:attr/dividerHorizontal"/>

	<LinearLayout
		style="?buttonBarStyle"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">

		<Button
			android:id="@+id/dialog_no"
			style="?buttonBarButtonStyle"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@android:string/cancel"/>

		<Button
			android:id="@+id/dialog_yes"
			style="?buttonBarButtonStyle"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:text="@android:string/ok"/>
	</LinearLayout>

</LinearLayout>