...
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="?textColorPrimary" />
    </LinearLayout>

    <TextView
        android:id="@+id/deleteButton"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:clickable="true"
...
