<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <group android:id="@+id/list_menu_group" >
        <item
            android:id="@+id/menu_clearcompleted"
            android:orderInCategory="300"
            android:showAsAction="never"
            android:title="@string/menu_clearcompleted"/>
    </group>

</menu>