...
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">Notes</string>
    <string name="title_create">New note</string>
    <string name="timemachine">Time machine</string>
    <string name="time">Time</string>
    <string name="done">Done</string>
    <string name="saved">Saved</string>
    <string name="distance">Distance</string>
    <string name="need_location_help">Long press to set a location</string>
    <string name="near">Near</string>
    <string name="menu_save_and_add">Save and add note</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_deletelist">Delete list</string>
    <string name="menu_sync">Sync</string>
    <string name="menu_share">Share</string>
    <string name="menu_preferences">Settings</string>
    <string name="menu_createlist">Start new list</string>
    <string name="menu_clearcompleted">Clear completed</string>
    <string name="menu_setdefaultlist">Set as default list</string>
    <string name="new_default_set">New default set</string>
    <string name="menu_managelists">Edit list</string>
    <string name="add_item">Add item</string>
...
    <string name="settings_lang">Language</string>
    <string name="settings_lang_dialog">@string/settings_lang</string>
    <string name="settings_summary_theme_black">Black</string>
    <string name="settings_summary_theme_dark">Dark</string>
    <string name="settings_summary_theme_light">Light</string>
    <string name="settings_summary_theme_classic">Classic</string>
    <string name="settings_cat_appearance">Appearance</string>
    <string name="preference_preview_text">This is how the editor text will appear</string>
    <string name="settings_account_title">Select an account</string>
    <string name="settings_account_summary">Touch to switch account</string>
    <string name="settings_sync_enable_title">Google Tasks sync</string>
    <string name="gtasks_sync_info">Not all information can be synced with Google Tasks. Only notes, due date (not time) and todo-status is synced.</string>
    <string name="settings_cat_syncing">Synchronization</string>
...
