<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<EditText
		android:id="@+id/passwordField"
		android:layout_width="match_parent"
		android:layout_height="48dp"
		android:hint="@string/enter_password"
		android:inputType="textPassword"
		android:paddingLeft="16dp"
		android:paddingTop="8dp"
		android:paddingRight="16dp"
		android:paddingBottom="8dp"
		android:singleLine="true"
		android:importantForAutofill="no">

		<requestFocus/>
	</EditText>

	<EditText
		android:id="@+id/passwordVerificationField"
		android:layout_width="match_parent"
		android:layout_height="48dp"
		android:hint="@string/confirm_new_password"
		android:inputType="textPassword"
		android:paddingLeft="16dp"
		android:paddingTop="8dp"
		android:paddingRight="16dp"
		android:paddingBottom="8dp"
		android:singleLine="true"
		android:visibility="gone"
		android:importantForAutofill="no"/>

	<include
		android:id="@+id/buttons"
		layout="@layout/dialog_ok_cancel"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"/>

</LinearLayout>