<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!-- Outside group to allow for action bar placement -->
    <item
        android:id="@+id/menu_delete"
        android:icon="?content_discard"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/menu_delete">
    </item>
    <item
        android:id="@+id/menu_revert"
        android:icon="?content_undo"
        android:orderInCategory="101"
        android:showAsAction="ifRoom"
        android:title="@android:string/cancel"/>
    <item
        android:id="@+id/menu_share"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:icon="?social_share"
        android:orderInCategory="102"
        android:showAsAction="ifRoom"
        android:title="@string/menu_share"/>
    <item
        android:id="@+id/menu_lock"
        android:icon="?device_access_secure"
        android:orderInCategory="103"
        android:showAsAction="ifRoom"
        android:title="@string/lock_note"/>
    <item
        android:id="@+id/menu_unlock"
        android:icon="?device_access_not_secure"
        android:orderInCategory="104"
        android:showAsAction="ifRoom"
        android:title="@string/unlock_note"/>

    <group android:id="@+id/editor_menu_group" >
        <item
            android:id="@+id/menu_timemachine"
            android:orderInCategory="105"
            android:showAsAction="never"
            android:title="@string/timemachine"/>
    </group>

</menu>