...
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:fillViewport="true">

		<com.nononsenseapps.ui.TitleNoteTextView
			android:id="@+id/taskText"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:ellipsize="end"
			android:paddingBottom="4dp"
			android:singleLine="false"
			android:textAppearance="?android:attr/textAppearanceSmall"
...
